# smrt

./: .gitignore  README.md  pyproject.toml  setup.py
smrt/: __init__.py  broadcast.py  make_request.py  schemas.py  smrt.py  smrtapp.py
smrt/schemas/: se.novafaen.smrt.error.v1+json
tests/: test_smrt.py
