[tool.poetry]
name = "smrt"
version = "0.0.1"
description = "I am so smrt, I am so smrt... I mean S.M.A.R.T"
authors = ["Kristoffer Nilsson-Chavez <kristoffer@novafaen.se>"]
homepage = "http://smrt.novafaen.se/"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
flask-negotiate = "^0.1"
werkzeug = "^2.2.3"
requests = "^2.22.0"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
pydocstyle = "^5.0.2"
pycodestyle = "^2.5.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
